dev: fixed scrolling on mobile devices

--- a/src/components/Catalog/Catalog.css
+++ b/src/components/Catalog/Catalog.css
@@ -1,11 +1,28 @@
 .catalog__page {
-  /* position: absolute; */
+  /* -webkit-overflow-scrolling: touch; */
+  position: absolute;
   /* overflow: scroll; */
   /* width: 100dvw; */
   /* height: 100dvh; */
-  min-height: calc(100% - 51px);
+  /* min-height: calc(100% - 51px); */
   transform: translateX(0dvw);
   transition: all .3s ease-in-out;
+
+
+  /* position: fixed; */
+  position: absolute;
+  overflow: scroll;
+  /* width: 100dvw;
+  height: 100dvh; */
+  width: 100%;
+  height: 100%;
+  top: 0;
+  padding: 40px 0 51px 0;
+  padding-top: 0;
+  /* transform: translateX(100dvw); */
+  background-color: rgb(0, 0, 0);
+  box-sizing: border-box;
+  scrollbar-width: none;
 }
 
 @media (min-width: 426px) {
