--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -3,8 +3,11 @@
   justify-content: space-between;
   gap: 25px;
   padding: 0 10px;
-  position: sticky;
+  /* position: sticky; */
+  position: absolute;
+  /* position: fixed; */
   position: -webkit-sticky;
+  top: calc(100% - 50px);
   bottom: 0;
   left: 0;
   right: 0;
